# sudoku

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  common.h  makefile  save.json  scene.cpp  store.json  test.json  test.sh
.github/workflows/: build.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml
src/: CMakeLists.txt  DL В разработке Enshrouded P RUS + ENG + 13 (2024 RPG) (654213) Portable .torrent  SudokuSolver.cpp  SudokuSolver.h  block.cpp  block.h  color.h  command.cpp  command.h  common.h  display_symbol.h  i18n.cpp  i18n.h  input.cpp  input.h  main.cpp  minesweeper.cpp  minesweeper.h  scene.cpp  scene.h  system_env.hpp  test.cpp  test.h  utility.inl
src/gui/: mainwindow.cpp  mainwindow.h  sudokucell.cpp  sudokucell.h
tests/: CMakeLists.txt  performance_test.cpp
